--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.7
 colorama==0.4.6
-fastapi==0.115.3
+fastapi==0.115.6
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+pytest==8.3.4
 sniffio==1.3.1
 starlette==0.41.0
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.32.0
